--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <div class="section">
       <label>¿Habilitado para ingresar?</label>
       <div class="input-estilo" id="status-equipo"></div>
-      <div class="alert-box alert-red" id="alerta-ingreso">❌ Equipo no habilitado para el ingreso, contacte a Control Flota 📞 Tel: 56 9 3860 1767.</div>
+      <div class="alert-box alert-red" id="alerta-ingreso">Equipo no habilitado para el ingreso, contacte a Control Flota 📞 Tel: 56 9 3860 1767.</div>
       <div class="alert-box alert-yellow" id="alerta-carga-extra">⚠️ Ojo: Este equipo podría realizar ingreso solo a reabastecer combustible o a realizar carga eléctrica. ⚠️</div>
     </div>
 
@@ -430,4 +430,5 @@
   </script>
 </body>
 </html>
+
 
