--- a/index.html
+++ b/index.html
@@ -335,14 +335,14 @@
         const observaciones = equipoEncontrado.OBSERVACIONES || "";
         
         if (status === "operativo") {
-          statusBox.innerHTML = '<span class="no-habilitado">❌ No habilitado.</span>';
+          statusBox.innerHTML = '<span class="no-habilitado">❌ No habilitado. ❌</span>';
           obsBox.innerText = observaciones || "❌ Equipo sin solicitudes - No esta autorizado para ingreso. ❌";
           alerta.style.display = "block";
           alertaAmarilla.style.display = "block";
           obsManual.style.display = "block";
         } else {
-          statusBox.innerHTML = '<span class="habilitado">✅ Habilitado.</span>';
-          obsBox.innerText = observaciones || "✅ Equipo habilitado para ingreso.";
+          statusBox.innerHTML = '<span class="habilitado">✅ Habilitado. ✅</span>';
+          obsBox.innerText = observaciones || "✅ Equipo habilitado para ingreso. ✅";
           alerta.style.display = "none";
           alertaAmarilla.style.display = "none";
         }
@@ -430,5 +430,6 @@
   </script>
 </body>
 </html>
+
 
 
