--- a/index.html
+++ b/index.html
@@ -122,6 +122,23 @@
       transform: scale(1.03);
       box-shadow: 0 0 12px rgba(255, 0, 0, 0.2);
     }
+    .btn-reset {
+      background-color: #666;
+      color: #fff;
+      border: none;
+      padding: 14px 20px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 15px;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+      width: 100%;
+      margin-top: 10px;
+    }
+    .btn-reset:hover {
+      background-color: #555;
+      transform: scale(1.03);
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
+    }
     .spinner {
       display: inline-block;
       width: 15px;
@@ -193,6 +210,8 @@
       border: 1px solid #ddd;
       cursor: pointer;
       transition: all 0.2s ease;
+      flex: 1;
+      min-width: 160px;
     }
     .checkbox-container:hover {
       background-color: #f0f0f0;
@@ -200,12 +219,15 @@
     .checkbox-container input[type="checkbox"] {
       margin-right: 6px;
       cursor: pointer;
+      width: 16px;
+      height: 16px;
     }
     .checkbox-label {
       font-size: 13px;
       font-weight: bold;
       color: #333;
       cursor: pointer;
+      white-space: nowrap;
     }
   </style>
 </head>
@@ -275,6 +297,7 @@
     </div>
 
     <button class="btn" onclick="enviarFormulario()">Enviar</button>
+    <button class="btn-reset" onclick="reiniciarFormulario()">Reiniciar formulario</button>
   </div>
 
   <div id="overlay">
@@ -434,6 +457,13 @@
           textoActual === "INGRESA A CARGA ELÉCTRICA" || 
           textoActual === "INGRESA A CARGA DE COMBUSTIBLE Y CARGA ELÉCTRICA") {
         obsManual.value = textoObservaciones;
+      }
+    }
+
+    // Función para reiniciar el formulario
+    function reiniciarFormulario() {
+      if (confirm("¿Está seguro de que desea reiniciar el formulario? Se perderán todos los datos ingresados.")) {
+        location.reload();
       }
     }
 
