--- a/index.html
+++ b/index.html
@@ -313,21 +313,23 @@
       margin-bottom: 2px;
     }
 
+    /* ESTILOS MODIFICADOS PARA LOS MENSAJES DE CARGA */
     .loading-indicator {
       display: inline-flex;
       align-items: center;
       margin-left: 8px;
       color: #c62828;
-      font-size: 12px;
+      font-size: 16px; /* Aumentado de 12px a 16px */
+      font-weight: bold; /* Añadido para mayor visibilidad */
     }
     .small-spinner {
-      width: 12px;
-      height: 12px;
+      width: 16px; /* Aumentado de 12px a 16px */
+      height: 16px; /* Aumentado de 12px a 16px */
       border: 2px solid rgba(198, 40, 40, 0.2);
       border-top: 2px solid #c62828;
       border-radius: 50%;
       animation: spin 1s linear infinite;
-      margin-right: 4px;
+      margin-right: 8px; /* Aumentado de 4px a 8px */
     }
   </style>
 </head>
