--- a/index.html
+++ b/index.html
@@ -726,9 +726,9 @@
       if (checkboxCombustible.checked && checkboxElectrica.checked) {
         textoObservaciones = "INGRESA A CARGA DE COMBUSTIBLE Y CARGA ELÉCTRICA";
       } else if (checkboxCombustible.checked) {
-        textoObservaciones = "INGRESA A CARGA DE COMBUSTIBLE";
+        textoObservaciones = "INGRESARÁ A REALIZAR CARGA DE COMBUSTIBLE";
       } else if (checkboxElectrica.checked) {
-        textoObservaciones = "INGRESA A CARGA ELÉCTRICA";
+        textoObservaciones = "INGRESARÁ A REALIZAR CARGA ELÉCTRICA";
       }
       
       const textoActual = obsManual.value.trim();
@@ -828,3 +828,4 @@
   </script>
 </body>
 </html>
+
