--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
     </div>
 
     <div class="section">
-      <label>Observaciones:</label>
+      <label>Observaciones del equipo:</label>
       <div class="input-estilo" id="observaciones-equipo"></div>
       
       <div class="checkbox-group" id="checkbox-group" style="display:none;">
@@ -832,3 +832,4 @@
   </script>
 </body>
 </html>
+
