--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
     </div>
 
     <div class="section">
-      <label>Nombre conductor:</label>
+      <label>Nombre del conductor:</label>
       <div class="input-estilo" id="datos-conductor"></div>
     </div>
 
@@ -730,9 +730,9 @@
       if (checkboxCombustible.checked && checkboxElectrica.checked) {
         textoObservaciones = "INGRESA A CARGA DE COMBUSTIBLE Y CARGA ELÉCTRICA";
       } else if (checkboxCombustible.checked) {
-        textoObservaciones = "INGRESA A CARGA DE COMBUSTIBLE";
+        textoObservaciones = "INGRESARÁ A REALIZAR CARGA DE COMBUSTIBLE";
       } else if (checkboxElectrica.checked) {
-        textoObservaciones = "INGRESA A CARGA ELÉCTRICA";
+        textoObservaciones = "INGRESARÁ A REALIZAR CARGA ELÉCTRICA";
       }
       
       const textoActual = obsManual.value.trim();
@@ -832,4 +832,5 @@
   </script>
 </body>
 </html>
+
 
